# llamanetes

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  test_runner.py
examples/: basic_generation.py  config.json  pipeline_example.py  simple_pipeline.json
llamanetes/: __init__.py  chains.py  cli.py  core.py
tests/: test_chains.py  test_core.py
