[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamanetes"
version = "0.1.0"
description = "AIBrix-like tool for llama.cpp in Python3"
authors = [
    {name = "Eric Curtin", email = "eric@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=3.7.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
llamanetes = "llamanetes.cli:main"

[project.urls]
Homepage = "https://github.com/ericcurtin/llamanetes"
Repository = "https://github.com/ericcurtin/llamanetes"
Issues = "https://github.com/ericcurtin/llamanetes/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llamanetes*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true